# Autonomous-RC-Truck

./: .gitignore  README.md
Comms/gui/TcpServerLibrary/: TcpServer.cs
Comms/truck/header/: TcpClient.h
Comms/truck/source/: CMakeLists.txt
Comms/truck/source/tcp_client/: CMakeLists.txt  TCP_Server.sln  partitions.csv
Comms/truck/source/tcp_client/main/: CMakeLists.txt  ConnectWifiTest.cpp  NVS_main.cpp  PathDataHandler.cpp  PathDataHandler.h  TcpClient.cpp  TcpWifiConnection.cpp  TcpWifiConnection.h  data_transfer.c  tcp_client_main.cpp  tcp_client_v4.cpp
GUI/CSharpTests/: CRectangle.cs  Output-Build.txt  cs1.cs
GUI/GUI/: Gui Training.sln  MainWindow.xaml  MainWindow.xaml.cs  Point.cs  README.md  TcpServer.cs  app.manifest
GUI/header/: template.hpp
GUI/source/: GUI.py  main.cpp
RCTruck/header/: CMotor.hpp
RCTruck/source/: CMakeLists.txt  partitions.csv
RCTruck/source/main/: CMakeLists.txt  CMemory.cpp  CMemory.hpp  CMotor.cpp  CMotor.hpp  CSensor.cpp  CSensor.hpp  CServo.cpp  CServo.hpp  CTruck.cpp  CTruck.hpp  main.cpp  test_main.c  test_main.cpp
RCTruck/source/test/: CMakeLists.txt  test_hello_world.c
